--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@caranmegil/react-google-login",
-    "version": "6.0.0",
+    "version": "6.0.5",
     "description": "A Google Login Component for React",
     "main": "dist/google-login.js",
     "scripts": {
@@ -35,8 +35,8 @@
       "google-oAuth"
     ],
     "author": {
-      "name": "Anthony Grove",
-      "email": "anthony@th3legend.com"
+      "name": "William R. Moore",
+      "email": "william@nerderium.com"
     },
     "license": "MIT",
     "bugs": {
